<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragment.SignUpFragment">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="@dimen/_20sdp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_28sdp"
        android:layout_marginTop="@dimen/_10sdp"/>
    <EditText
        android:id="@+id/name_edt_signup"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@drawable/edittext"
        android:padding="@dimen/_7sdp"
        android:hint="@string/ahmed_mohamed"
        android:drawablePadding="@dimen/_10sdp"
        android:drawableStart="@drawable/username"
        android:inputType="text"
        android:nextFocusForward="@id/email_edt_signup"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_28sdp"
        android:layout_marginTop="@dimen/_10sdp"/>
    <EditText
        android:id="@+id/email_edt_signup"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@drawable/edittext"
        android:hint="@string/xyz_ffs_com"
        android:padding="@dimen/_7sdp"
        android:drawablePadding="@dimen/_10sdp"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/email"
        android:nextFocusForward="@id/password_edt_signup"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_28sdp"
        android:layout_marginTop="@dimen/_10sdp"/>
    <EditText
        android:id="@+id/password_edt_signup"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@drawable/edittext"
        android:hint="@string/passw"
        android:padding="@dimen/_7sdp"
        android:drawablePadding="@dimen/_10sdp"
        android:drawableStart="@drawable/password"
        android:inputType="textPassword"
        android:nextFocusForward="@id/phone_edt_signup"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_must_be_not_less_than_6_characters"
        android:textColor="#FF1744"
        android:textSize="@dimen/_14sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_5sdp"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Phone Number"
        android:textColor="@color/black"
        android:textSize="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_28sdp"
        android:layout_marginTop="@dimen/_10sdp"/>
    <EditText
        android:id="@+id/phone_edt_signup"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@drawable/edittext"
        android:hint="01xxxxxxxxx"
        android:padding="@dimen/_7sdp"
        android:drawablePadding="@dimen/_10sdp"
        android:inputType="phone"
        android:drawableStart="@drawable/phone"
        android:nextFocusForward="@id/signupbtn"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signupbtn"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_35sdp"
        android:background="@drawable/startbtn"
        android:text="@string/signup"
        android:layout_marginTop="@dimen/_15sdp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        />
    <ProgressBar
        android:id="@+id/progresssignup"
        android:layout_width="@dimen/_35sdp"
        android:layout_height="@dimen/_35sdp"
        style="?android:attr/progressBarStyleLarge"
        android:layout_gravity="center"
        android:visibility="gone"/>
</LinearLayout>



</LinearLayout>