<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".ui.fragment.LoginFragment">
<ImageView
    android:layout_width="@dimen/_250sdp"
    android:layout_height="@dimen/_250sdp"
    android:src="@drawable/login"
    android:layout_gravity="center_horizontal"
    android:scaleType="centerCrop"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e_mail"
        android:textColor="@color/black"
        android:textSize="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_28sdp"
        android:layout_marginTop="@dimen/_10sdp"/>
    <EditText
        android:id="@+id/email_edt_login"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@drawable/edittext"
        android:hint="@string/xx_pppp_com"
        android:padding="@dimen/_10sdp"
        android:drawablePadding="@dimen/_10sdp"
        android:drawableStart="@drawable/email"
        android:inputType="textEmailAddress"
        android:nextFocusForward="@id/password_edt_login"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_28sdp"
        android:layout_marginTop="@dimen/_10sdp"/>
    <EditText
        android:id="@+id/password_edt_login"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@drawable/edittext"
        android:hint="************"
        android:drawablePadding="@dimen/_10sdp"
        android:padding="@dimen/_10sdp"
        android:inputType="textPassword"
        android:drawableStart="@drawable/password"
        android:nextFocusForward="@id/loginbtn"
        />
    <TextView
        android:id="@+id/forgetpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        android:layout_gravity="end"
        android:layout_marginStart="@dimen/_28sdp"
        android:layout_marginTop="@dimen/_5sdp"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginbtn"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_35sdp"
        android:background="@drawable/startbtn"
        android:text="@string/login"
        android:layout_marginTop="@dimen/_5sdp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        />
    <ProgressBar
        android:id="@+id/progresslogin"
        android:layout_width="@dimen/_35sdp"
        android:layout_height="@dimen/_35sdp"
        style="?android:attr/progressBarStyleLarge"
        android:layout_gravity="center"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_account_signup"
        android:textColor="@color/purple_700"
        android:textSize="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_gravity="center_horizontal"/>



</LinearLayout>