<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    tools:context=".ui.fragment.forgetPasswordFragment">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_90sdp"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_email"
        android:textColor="@color/black"
        android:textSize="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_1sdp"
        android:layout_marginTop="@dimen/_10sdp"/>
    <EditText
        android:id="@+id/email_edt_forget"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@drawable/edittext"
        android:hint="@string/xx_pppp_com"
        android:drawablePadding="@dimen/_10sdp"
        android:drawableStart="@drawable/email"
        android:inputType="textEmailAddress"

        android:nextFocusForward="@id/password_edt_login"
        />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/forgetbtn"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="wrap_content"
            android:background="@drawable/startbtn"
            android:text="@string/send_email"
            android:layout_marginTop="@dimen/_25sdp"
            android:textColor="@color/white"
            android:textAllCaps="false"


            />

    </LinearLayout>

</LinearLayout>